--- a/src/cartegories.styles.scss
+++ b/src/cartegories.styles.scss
@@ -1,12 +1,5 @@
 // General classes
 
-.link {
-  text-decoration: none;
-}
-.link:visited {
-  color: inherit;
-}
-
 // HEAD ---- SECTION
 
 h3 {
@@ -51,11 +44,13 @@ h3 {
 .card {
   border: 2px solid rgba(223, 220, 220, 0.643);
   width: 90vw;
+  height: fit-content;
   margin: 15px;
   .card-image {
-    background-color: aqua;
-    height: 50vh;
-    width: inherit;
+    background-color: rgb(82, 168, 168);
+    height: 40vh;
+    // overflow: hidden;
+    width: 100%;
     .test {
       width: inherit;
       height: inherit;
@@ -101,9 +96,15 @@ h3 {
   border-radius: 10px;
 }
 .btn-fill {
-  min-width: 80vw;
+  min-width: 80%;
 }
 .btn-primary {
   background-color: #4caf50; /* Green */
 }
 // FOOTER SECTION
+@media only screen and (min-width: 600px) {
+  .section-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
