add and subsribed to firebase onAuth state

--- a/src/cartegories.styles.scss
+++ b/src/cartegories.styles.scss
@@ -109,6 +109,9 @@ h3 {
 .btn-fill {
   min-width: 80%;
 }
+.btn:hover {
+  cursor: pointer;
+}
 .btn-primary {
   background-color: var(--primary); /* Green */
 }
