--- a/src/components/component.syles.scss
+++ b/src/components/component.syles.scss
@@ -6,6 +6,11 @@
 .text-center {
   text-align: center;
 }
+.outline {
+  outline: 2px solid black;
+  padding: 2px 15px;
+  border-radius: 15px;
+}
 // FONT-COLOR
 .fnt-md {
   font-size: 1.5em;
@@ -26,6 +31,7 @@
 }
 .fl-center {
   justify-content: center;
+  align-items: center;
 }
 .fl-col {
   flex-direction: column;
@@ -56,7 +62,9 @@
 .mg-bottom-5 {
   margin: 5px;
 }
-
+.mg-0 {
+  margin: 0;
+}
 .mg-10 {
   margin: 20px;
 }
@@ -66,6 +74,9 @@
 }
 .pd-10 {
   padding: 10px;
+}
+.pd-s-5 {
+  padding: 0 10px;
 }
 
 // TEXT
