--- a/src/cartegories.styles.scss
+++ b/src/cartegories.styles.scss
@@ -63,6 +63,7 @@ h3 {
     // overflow: hidden;
     width: 100%;
     .test {
+      object-fit: cover;
       width: inherit;
       height: inherit;
       background-color: black;
@@ -85,6 +86,7 @@ h3 {
     margin-bottom: 1px;
   }
 }
+
 .section-card {
   margin: 15px;
   padding: 15px;
@@ -123,11 +125,25 @@ h3 {
     gap: 10px;
     padding: 10px;
   }
+  .section-child-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    gap: 10px;
+    padding: 10px;
+  }
 }
 @media only screen and (min-width: 992px) {
   .section-child {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    padding: 10px;
+  }
+  .section-child-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
     gap: 10px;
     padding: 10px;
   }
