add images to the product item

--- a/src/cartegories.styles.scss
+++ b/src/cartegories.styles.scss
@@ -92,6 +92,11 @@ h3 {
   padding: 15px;
   text-align: start;
   background-color: antiquewhite;
+  background-size: cover;
+  color: white;
+  p {
+    color: #fff;
+  }
 }
 .border {
   border: 1px solid #fff;
