--- a/src/Routes/Checkout/checkout.styles.scss
+++ b/src/Routes/Checkout/checkout.styles.scss
@@ -13,10 +13,17 @@
       font-size: 1rem;
       font-weight: 600;
       outline: 2px solid black;
-      padding: 10px;
-      border-radius: 15px;
+      padding: 2px 5px;
+      background-color: black;
+      color: white;
+      transition: all 0.3s ease-in-out;
     }
   }
+}
+
+.quantity-setter:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 .flex {
   display: flex;
