--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 
 body {
   margin: 0;
-  font-family: "Abril Fatface", cursive;
+  font-family: "Manrope", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: rgb(61, 59, 59);
