--- a/src/cartegories.styles.scss
+++ b/src/cartegories.styles.scss
@@ -38,9 +38,19 @@ h3 {
 // MAIN --- SECTION
 .main {
   width: 100vw;
-  height: 50vh;
+  height: 70vh;
   display: grid;
   place-content: center;
+  h1 {
+    font-size: 10vh;
+    margin-bottom: 0;
+    letter-spacing: 10px;
+  }
+
+  p {
+    text-align: center;
+    max-width: 60vw;
+  }
 }
 .test {
   background-color: azure;
