update login and sign up form

--- a/src/cartegories.styles.scss
+++ b/src/cartegories.styles.scss
@@ -132,6 +132,16 @@ h3 {
 .btn-primary {
   background-color: var(--primary); /* Green */
 }
+.btn-round {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 25px;
+}
 // FOOTER SECTION
 @media only screen and (min-width: 768px) {
   .section-child {
