--- a/src/components/component.syles.scss
+++ b/src/components/component.syles.scss
@@ -29,6 +29,9 @@
 .fl {
   display: flex;
 }
+.fl-sp-btw {
+  justify-content: space-between;
+}
 .fl-center {
   justify-content: center;
   align-items: center;
@@ -67,6 +70,9 @@
 }
 .mg-10 {
   margin: 20px;
+}
+.mg-5 {
+  margin: 5px;
 }
 // PADDING
 .pd-0 {
@@ -124,11 +130,11 @@
   background: #f2f2f299;
   width: 100%;
   border: 0;
-  margin: 0 0 15px;
+  margin: 0 2px 15px;
   padding: 15px;
   // box-sizing: border-box;
   font-size: 14px;
-  border-radius: 7px;
+  border-radius: 20px;
 }
 .form {
   display: flex;
@@ -138,7 +144,7 @@
   position: relative;
   z-index: 1;
   background: #ffffff;
-  max-width: 360px;
+  max-width: 560px;
   margin: 0 auto 100px;
   padding: 60px;
   text-align: center;
